# hcsshim

./: .gitignore  .golangci.yml  CMakeLists.txt  Directory.Build.rsp  Makefile  go.mod  go.sum  hcsshim.proj  lcow.ps1  psakefile.ps1  tools.go
.github/workflows/: bench.yml  ci.yml
.regal/: config.yaml
cmake/: CMakePresets.json  FindGo.cmake  install-linter.cmake  vs.cmake
cmd/cgo/: main.go
cmd/containerd-shim-runhcs-v1/: delete.go  events.go  exec_clone.go  exec_hcs.go  exec_wcow_podsandbox.go  main.go  metric.go  pod.go  serve.go  service.go  service_internal.go  start.go  task_hcs.go  task_wcow_podsandbox.go
cmd/containerd-shim-runhcs-v1/options/: runhcs.pb.go  runhcs.proto
cmd/containerd-shim-runhcs-v1/stats/: stats.pb.go
cmd/differ/: app.go  app_opts.go  decompress.go  main.go  privileges.go  sample.go  tar2ext4.go  wclayer.go
cmd/differ/mediatype/: mediatype.go
cmd/differ/opts/: opts.go
cmd/gcs/: main.go
cmd/hcs-sak/: helpers.go  main.go
cmd/lcow-differ/: decompress.go  main.go  tar2ext4.go
cmd/ncproxy/: hcn_networking_test.go  ncproxy.go  run.go  server.go
cmd/ncproxy/ncproxygrpc/: networkconfigproxy.pb.go  networkconfigproxy.proto
cmd/runhcs/: container.go  create-scratch.go  kill.go  prepare-disk.go  vm.go
cmd/vhd-inspect/: main.go
cmd/wclayer/: makebaselayer.go  wclayer.go
computestorage/: attach.go  destroy.go  detach.go  export.go  format.go  helpers.go  import.go  initialize.go  mount.go  setup.go
ext4/internal/compactext4/: compact.go
ext4/tar2ext4/: tar2ext4.go  tar2ext4_test.go
hcn/: hcnsupport.go
internal/clone/: registry.go
internal/cmd/: cmd.go  cmd_test.go  diag.go  io.go  io_npipe.go
internal/computeagent/: computeagent.pb.go
internal/computecore/: callback.go  computecore.go  doc.go  errors.go  event.go  operation.go  zsyscall_windows.go
internal/copyfile/: copyfile.go
internal/cow/: cow.go
internal/devices/: assigned_devices.go  drivers.go  modprob.go  pnp.go  service.go
internal/devices/utility/: doc.go  utility.go
internal/extendedtask/: extendedtask.pb.go
internal/gcs/: bridge.go  bridge_test.go  container.go  guestconnection.go  guestconnection_test.go  process.go  protocol.go
internal/guest/bridge/: bridge.go  bridge_unit_test.go  bridge_v2.go
internal/guest/kmsg/: kmsg.go
internal/guest/network/: network.go
internal/guest/prot/: protocol.go
internal/guest/storage/: mount.go
internal/guest/transport/: vsock.go
internal/guestrequest/: types.go
internal/hcs/: callback.go  errors.go  process.go  system.go
internal/hcsoci/: clone.go  create.go  devices.go  devices_test.go  hcsdoc_wcow.go  network.go  resources_lcow.go  resources_wcow.go
internal/jobcontainers/: jobcontainer.go  mounts.go  storage.go
internal/layers/: layers.go
internal/lcow/: common.go  disk.go  scratch.go
internal/log/: context.go  format.go  hook.go
internal/log/fields/: fields.go
internal/logfields/: fields.go
internal/memory/: types.go
internal/ncproxyttrpc/: networkconfigproxy.pb.go
internal/oc/: exporter.go  span.go
internal/oci/: annotations.go
internal/option/: option.go  option_test.go
internal/os/: todo.go
internal/ospath/: join.go
internal/otel/: otel.go  spanprocessors.go  trace.go  tracer.go
internal/resources/: resources.go
internal/safefile/: safeopen.go
internal/schemaversion/: schemaversion.go
internal/shimdiag/: shimdiag.pb.go
internal/sync/: block.go  once.go
internal/uvm/: clone.go  close.go  combine_layers.go  computeagent.go  cpugroups.go  cpulimits_update.go  create.go  create_lcow.go  create_wcow.go  guest_request.go  hvsocket.go  io.go  io_test.go  memory_update.go  modify.go  network.go  pause.go  pipes.go  plan9.go  scsi.go  security_policy.go  share.go  start.go  types.go  update_uvm.go  virtual_device.go  vpmem.go  vpmem_mapped.go  vpmem_mapped_test.go  vsmb.go  wait.go
internal/vhd/: helpers.go  helpers_test.go  vhd.go  volume.go  zsyscall_windows.go
internal/vm/: clone.go  vm.go
internal/vmcompute/: vmcompute.go
internal/vmservice/: vmservice.pb.go
internal/wclayer/: activatelayer.go  baselayer.go  baselayerreader.go  baselayerwriter.go  converttobaselayer.go  createlayer.go  createscratchlayer.go  deactivatelayer.go  destroylayer.go  expandscratchsize.go  exportlayer.go  getlayermountpath.go  getsharedbaseimages.go  grantvmaccess.go  importlayer.go  layerexists.go  layerid.go  legacy.go  nametoguid.go  preparelayer.go  processimage.go  unpreparelayer.go
internal/winapi/: memory.go  token.go  zsyscall_windows.go
magefiles/: build.go  exec.go  lint.go  mage.go  magefile.go  magefile_unix.go  magefile_windows.go
osversion/: builds.go  builds_test.go  osversion_windows.go
pkg/annotations/: annotations.go
pkg/cimfs/: cim_test.go
pkg/octtrpc/: interceptor.go
pkg/securitypolicy/: api.rego  open_door.rego  securitypolicy_marshal.go
scripts/: Update-Proto.ps1
test/: CMakeLists.txt  go.mod  go.sum
test/containerd-shim-runhcs-v1/: delete_test.go  start_test.go
test/cri-containerd/: clone_test.go  container_downlevel_test.go  container_layers_packing_test.go  container_network_test.go  container_update_test.go  container_virtual_device_test.go  createcontainer_test.go  drivers_test.go  helper_exec_test.go  helper_sandbox_test.go  jobcontainer_test.go  main_test.go  runpodsandbox_test.go
test/functional/: container_bench_test.go  container_lcow_bench_test.go  container_test.go  hostprocess_test.go  lcow_bench_test.go  lcow_container_bench_test.go  lcow_container_test.go  lcow_networking_test.go  lcow_policy_test.go  lcow_test.go  lcow_uvm_test.go  main_test.go  networking_lcow_test.go  uvm_bench_test.go  uvm_lcow_test.go  uvm_mem_backingtype_test.go  uvm_memory_test.go  uvm_plannine_test.go  uvm_properties_test.go  uvm_scratch_test.go  uvm_scsi_test.go  uvm_test.go  uvm_update_memory_test.go  uvm_update_test.go  uvm_virtualdevice_test.go  uvm_vpmem_test.go  uvm_vsmb_test.go  uvm_wcow_test.go  wcow_test.go
test/gcs/: main_test.go
test/internal/: schemaversion_test.go
test/runhcs/: e2e_matrix_test.go
tools/: tools.go
(+103 files in other folders)
